// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: TextInput should render a disabled input 1`] = `
<DocumentFragment>
  .c1 {
  border: 2px solid hsl(0,0%,90%);
  border-radius: 20px;
  height: 36px;
  outline: none;
  box-sizing: border-box;
  padding: 7px 28px 7px 15px;
  font-size: 18px;
  line-height: 1em;
  width: auto;
  background-color: hsl(0,0%,90%);
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0"
  >
    <input
      class="c0 c1"
      disabled=""
    />
  </div>
</DocumentFragment>
`;

exports[`component: TextInput should render a success input 1`] = `
<DocumentFragment>
  .c2 {
  vertical-align: middle;
  width: 20px;
  height: 20px;
  position: absolute;
  right: 8px;
  color: hsl(200,10%,20%);
}

.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 20px;
  height: 36px;
  outline: none;
  box-sizing: border-box;
  padding: 7px 28px 7px 15px;
  font-size: 18px;
  line-height: 1em;
  width: auto;
  background-color: hsl(0,0%,100%);
  border-color: hsl(145,89%,28%);
  background: hsla(145,89%,28%,0.2);
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0"
  >
    <input
      class="c0 c1"
    />
    <svg
      class="c2"
      fill="currentcolor"
      height="1em"
      status="success"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M9.81384674,19.7396292 C9.5249491,19.7396292 9.24415138,19.6325301 9.02725315,19.4381317 L3.38789908,14.3504731 C2.906403,13.9166766 2.86770331,13.1741827 3.30239977,12.6926866 C3.73619624,12.2120905 4.47869019,12.1724908 4.96018627,12.6071873 L9.67974783,16.8641526 L18.9127726,5.4369457 C19.3204693,4.93204981 20.0593633,4.85285046 20.5642592,5.26144713 C21.0682551,5.66914381 21.1465544,6.40803779 20.7388578,6.91293368 L10.7273393,19.3040328 C10.524841,19.5542307 10.2269434,19.7108295 9.90654599,19.7369292 C9.87504624,19.7387292 9.84444649,19.7396292 9.81384674,19.7396292"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`component: TextInput should render a text input 1`] = `
<DocumentFragment>
  .c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 20px;
  height: 36px;
  outline: none;
  box-sizing: border-box;
  padding: 7px 28px 7px 15px;
  font-size: 18px;
  line-height: 1em;
  width: auto;
  background-color: hsl(0,0%,100%);
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0"
  >
    <input
      class="c0 c1"
    />
  </div>
</DocumentFragment>
`;

exports[`component: TextInput should render an error input 1`] = `
<DocumentFragment>
  .c2 {
  vertical-align: middle;
  width: 20px;
  height: 20px;
  position: absolute;
  right: 8px;
  color: hsl(200,10%,20%);
}

.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 20px;
  height: 36px;
  outline: none;
  box-sizing: border-box;
  padding: 7px 28px 7px 15px;
  font-size: 18px;
  line-height: 1em;
  width: auto;
  background-color: hsl(0,0%,100%);
  border-color: hsl(353,84%,44%);
  background: hsla(353,84%,44%,0.2);
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0"
  >
    <input
      class="c0 c1"
    />
    <svg
      class="c2"
      fill="currentcolor"
      height="1em"
      status="error"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M5.82753204,18.84 L18.172832,18.84 L11.999732,6.4956 L5.82753204,18.84 Z M19.919732,21 L4.08063204,21 C3.70623204,21 3.35793204,20.8065 3.16083204,20.4888 C2.96463204,20.1702 2.94663204,19.7715 3.11403204,19.4376 L11.034032,3.5967 C11.216732,3.2313 11.591132,3 11.999732,3 C12.409232,3 12.783632,3.2313 12.966332,3.5967 L20.886332,19.4376 C21.053732,19.7715 21.034832,20.1702 20.839532,20.4888 C20.642432,20.8065 20.294132,21 19.919732,21 Z M11.9649,14.5902 C12.4419,14.5902 12.8298,14.322 12.8298,13.9917 L12.8298,10.7985 C12.8298,10.4682 12.4419,10.2 11.9649,10.2 C11.4879,10.2 11.1,10.4682 11.1,10.7985 L11.1,13.9917 C11.1,14.322 11.4879,14.5902 11.9649,14.5902 Z M12.9729,16.5369 C12.9729,16.0185 12.5544,15.6 12.036,15.6 C11.5185,15.6 11.1,16.0185 11.1,16.5369 C11.1,17.0544 11.5185,17.4738 12.036,17.4738 C12.5544,17.4738 12.9729,17.0544 12.9729,16.5369 Z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`component: TextInput should render an input with a placeholder 1`] = `
<DocumentFragment>
  .c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 20px;
  height: 36px;
  outline: none;
  box-sizing: border-box;
  padding: 7px 28px 7px 15px;
  font-size: 18px;
  line-height: 1em;
  width: auto;
  background-color: hsl(0,0%,100%);
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0"
  >
    <input
      class="c0 c1"
      placeholder="hold my place"
    />
  </div>
</DocumentFragment>
`;

exports[`component: TextInput should render an warning input 1`] = `
<DocumentFragment>
  .c2 {
  vertical-align: middle;
  width: 24px;
  height: 24px;
  position: absolute;
  right: 8px;
  color: hsl(200,10%,20%);
}

.c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 20px;
  height: 36px;
  outline: none;
  box-sizing: border-box;
  padding: 7px 28px 7px 15px;
  font-size: 18px;
  line-height: 1em;
  width: auto;
  background-color: hsl(0,0%,100%);
  border-color: hsl(47,82%,47%);
  background: hsla(47,82%,47%,0.2);
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
    class="c0"
  >
    <input
      class="c0 c1"
    />
    <svg
      class="c2"
      fill="currentcolor"
      height="1em"
      status="warning"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M11.9998875,21 C11.723584,21 11.4472806,20.8946987 11.2357779,20.683196 L3.31657896,12.763097 C2.89447368,12.3409918 2.89447368,11.6578832 3.31657896,11.2357779 L11.2357779,3.31657896 C11.6578832,2.89447368 12.3418918,2.89447368 12.763997,3.31657896 L20.683196,11.2357779 C21.1053013,11.6578832 21.1053013,12.3409918 20.683196,12.763097 L12.763997,20.683196 C12.5524944,20.8946987 12.276191,21 11.9998875,21 Z M5.60710759,11.9998875 L11.9998875,18.3926674 L18.3926674,11.9998875 L11.9998875,5.60620758 L5.60710759,11.9998875 Z M11.9641121,12.7903224 C11.4871061,12.7903224 11.1001013,12.522119 11.1001013,12.1909149 L11.1001013,8.99857498 C11.1001013,8.66737084 11.4871061,8.4000675 11.9641121,8.4000675 C12.441118,8.4000675 12.8281229,8.66737084 12.8281229,8.99857498 L12.8281229,12.1909149 C12.8281229,12.522119 12.441118,12.7903224 11.9641121,12.7903224 Z M12.9730247,14.7370467 C12.9730247,15.2554532 12.5545194,15.6739584 12.036113,15.6739584 C11.5186065,15.6739584 11.1001013,15.2554532 11.1001013,14.7370467 C11.1001013,14.2195402 11.5186065,13.800135 12.036113,13.800135 C12.5545194,13.800135 12.9730247,14.2195402 12.9730247,14.7370467 Z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`component: TextInput should support margin space props 1`] = `
<DocumentFragment>
  .c1 {
  border: 2px solid hsl(200,9%,35%);
  border-radius: 20px;
  height: 36px;
  outline: none;
  box-sizing: border-box;
  padding: 7px 28px 7px 15px;
  font-size: 18px;
  line-height: 1em;
  width: auto;
  background-color: hsl(0,0%,100%);
}

.c1:focus {
  border-color: hsl(200,96%,35%);
}

.c1::-webkit-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::-moz-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1:-ms-input-placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c1::placeholder {
  color: hsl(200,18%,45%);
  font-style: oblique;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-top: 16px;
}

<div
    class="c0"
  >
    <input
      class="c0 c1"
    />
  </div>
</DocumentFragment>
`;
